--- a/src/AppBundle/Resources/views/alphabetic_page.html.twig
+++ b/src/AppBundle/Resources/views/alphabetic_page.html.twig
@@ -5,8 +5,8 @@
 
     <ul class="nav nav-tabs">
         {% for group in alphabetic_groups_list %}
-            <li {% if loop.first %} class="active" {% endif %}>
-                <a data-toggle="tab" href="#group{{ loop.index0 }}">
+            <li {% if loop.index0 == group_number %} class="active" {% endif %}>
+                <a href="{{ path('alphabetic_employees_page') }}?group={{ loop.index }}">
                     {{ group.start }} - {{ group.end }}
                 </a>
             </li>
@@ -14,37 +14,33 @@
     </ul>
 
     <div class="tab-content">
-        {% for group in alphabetic_groups_list %}
-            <div id="group{{ loop.index0 }}" class="tab-pane fade in {% if loop.first %} active {% endif %}">
-                <table class="table table-bordered">
-                    <tr>
-                        <th>ФИО</th>
-                        <th>Отдел</th>
-                        <th>Должность</th>
-                        <th>Телефон</th>
-                        <th>Период работы</th>
-                    </tr>
-                    {% for employee in group.employees %}
-                        {% set retireDate = 'н.в.' %}
-                        {% if employee.retireDate is not null %}
-                            {% set retireDate = employee.retireDate | date('d.m.Y') %}
-                        {% endif %}
+        <table class="table table-bordered">
+            <tr>
+                <th>ФИО</th>
+                <th>Отдел</th>
+                <th>Должность</th>
+                <th>Телефон</th>
+                <th>Период работы</th>
+            </tr>
+            {% for employee in employee_list %}
+                {% set retireDate = 'н.в.' %}
+                {% if employee.retireDate is not null %}
+                    {% set retireDate = employee.retireDate | date('d.m.Y') %}
+                {% endif %}
 
-                        <tr {% if loop.index is odd %}class="active"{% endif %}>
-                            <td>
-                                <a href="{{ path('employee_page', {'employee_id': employee.id}) }}">
-                                    {{ employee.lastName }} {{ employee.firstName }} {{ employee.patronymic }}
-                                </a>
-                            </td>
-                            <td>{{ employee.department.name }}</td>
-                            <td>{{ employee.position }}</td>
-                            <td>{{ employee.phoneNumber }}</td>
-                            <td>{{ employee.hireDate | date('d.m.Y') }} - {{ retireDate }}</td>
-                        </tr>
-                    {% endfor %}
-                </table>
-            </div>
-        {% endfor %}
+                <tr {% if loop.index is odd %}class="active"{% endif %}>
+                    <td>
+                        <a href="{{ path('employee_page', {'employee_id': employee.id}) }}">
+                            {{ employee.lastName }} {{ employee.firstName }} {{ employee.patronymic }}
+                        </a>
+                    </td>
+                    <td>{{ employee.department.name }}</td>
+                    <td>{{ employee.position }}</td>
+                    <td>{{ employee.phoneNumber }}</td>
+                    <td>{{ employee.hireDate | date('d.m.Y') }} - {{ retireDate }}</td>
+                </tr>
+            {% endfor %}
+        </table>
     </div>
 
 
